# Tea-Project-Manager

./: .gitignore  compile-i18n.ps1  config_manager.py  consts.py  main.py  pyproject.toml  utils.py
locales/en_US/LC_MESSAGES/: messages.po
locales/ja_JP/LC_MESSAGES/: messages.po
locales/zh_CN/LC_MESSAGES/: messages.po
templates/web/: index.html
templates/web/assets/scripts/: main.js
